V6815: Added new Detail Components and modification according Rev D.

--- a/Prevu.Synoptics.V6815_Enviroo/Details/D130.xaml
+++ b/Prevu.Synoptics.V6815_Enviroo/Details/D130.xaml
@@ -36,7 +36,7 @@
         <Rectangle Height="6" Stroke="Black" Width="30" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="285" Canvas.Top="225" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_NT_Belt_BottleSorter_wRoll Canvas.Left="28" Canvas.Top="50" Height="154" Width="376" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="130-01-MA1" Canvas.Left="54" Canvas.Top="154" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="130-02-EC1" Canvas.Left="195" Canvas.Top="20" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="130-02-ME1" Canvas.Left="195" Canvas.Top="20" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="130-03-MA1" Canvas.Left="364" Canvas.Top="125" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
