--- a/Prevu.Synoptics.V6815_Enviroo/Details/D180.xaml
+++ b/Prevu.Synoptics.V6815_Enviroo/Details/D180.xaml
@@ -61,7 +61,7 @@
         <Rectangle Height="6" Stroke="Black" Width="30" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="45" Canvas.Top="180" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_NT_Belt_BottleSorter_wRoll Canvas.Left="145" Canvas.Top="36" Height="154" Width="376" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="180-01-MA1" Canvas.Left="96" Canvas.Top="156" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="180-02-EC1" Canvas.Left="224" Canvas.Top="22" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="180-02-ME1" Canvas.Left="224" Canvas.Top="22" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="180-03-MA1" Canvas.Left="482" Canvas.Top="113" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
