--- a/Prevu.Synoptics.V6815_Enviroo/Pages/P140.xaml
+++ b/Prevu.Synoptics.V6815_Enviroo/Pages/P140.xaml
@@ -9,7 +9,7 @@
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas >
         <Labels:Pipe Width="107" StatusComponent="131-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="782" Canvas.Top="552" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="70" StatusComponent="129-01-MA1" PipeHeight="Medium" Canvas.Left="521" Canvas.Top="225" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="56" StatusComponent="129-01-MA1" PipeHeight="Medium" Canvas.Left="528" Canvas.Top="232" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -76,7 +76,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="115" StatusComponent="129-01-MA1" PipeHeight="Medium" Canvas.Left="446" Canvas.Top="195"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="151" StatusComponent="129-01-MA1" PipeHeight="Medium" Canvas.Left="410" Canvas.Top="209"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="97" StatusComponent="126-01-MA1" PipeHeight="Medium" Canvas.Left="217" Canvas.Top="99"/>
         <Labels:Pipe Width="98" StatusComponent="130-01-MA1" PipeHeight="Medium" Canvas.Left="704" Canvas.Top="334" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
@@ -109,7 +109,6 @@
         </Labels:Pipe>
         <Labels:Pipe Width="76" StatusComponent="168-01-MA1" PipeHeight="Medium" Canvas.Left="1287" Canvas.Top="709" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:NT_ConveyorBelt Height="3" Width="154" RenderTransformOrigin="0.5,0.5" Canvas.Left="652" Canvas.Top="545" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Machines:V01_ALV_VibratingFeeder Canvas.Left="294" Canvas.Top="157" Height="86" Width="173" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:NT_ConveyorBelt Height="3" Width="172" RenderTransformOrigin="0.5,0.5" Canvas.Left="758" Canvas.Top="706" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Machines:NT_ConveyorBelt Height="1" Width="144" Canvas.Left="1152" Canvas.Top="703" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_NT_Belt_BottleSorter Canvas.Left="735" Canvas.Top="329" Height="116" Width="246" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -119,7 +118,7 @@
         <Labels:DetailsLabel ComponentName="140-SORT" DetailsPageName="D140" Canvas.Left="792" Canvas.Top="323" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DetailsLabel ComponentName="150-SORT" DetailsPageName="D150" Canvas.Left="992" Canvas.Top="453" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DetailsLabel ComponentName="130-SORT" DetailsPageName="D130" Canvas.Left="582" Canvas.Top="191" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="129-01-MA1" Canvas.Left="381" Canvas.Top="116"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="129-01-MA1" Canvas.Left="288" Canvas.Top="231"/>
         <Labels:DeviceLabel ComponentName="131-01-MA1" Canvas.Left="684" Canvas.Top="573" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="151-01-MA1" Canvas.Left="799" Canvas.Top="732" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="168-01-MA1" Canvas.Left="1206" Canvas.Top="643" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -128,5 +127,6 @@
         <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="129-01-MA1" JumpToLabel="126-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="156" Canvas.Top="70"/>
         <Labels:JumpLabel JumpFromLabel="168-01-MA1" JumpToLabel="170-01-MA1" Canvas.Left="1360" Canvas.Top="679" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="131-01-MA1" JumpToLabel="175-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="518" Canvas.Top="446" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_DS_DiskSpreader Canvas.Left="237" Canvas.Top="140" Height="83" Width="193"/>
     </Canvas>
 </UserControl>
