--- a/Prevu.Synoptics.V6815_Enviroo/Pages/P170.xaml
+++ b/Prevu.Synoptics.V6815_Enviroo/Pages/P170.xaml
@@ -189,7 +189,7 @@
         <Labels:DeviceLabel ComponentName="205-01-MA1" Canvas.Left="522" Canvas.Top="508" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="213-01-MA1" Canvas.Left="1158" Canvas.Top="671" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="170-01-MA1" JumpToLabel="168-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="549" Canvas.Top="38" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:JumpLabel JumpFromLabel="170-01-MA1" JumpToLabel="228-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1027" Canvas.Top="202" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:JumpLabel JumpFromLabel="170-SORT" JumpToLabel="228-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1027" Canvas.Top="202" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="175-01-MA1" JumpToLabel="131-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1027" Canvas.Top="321" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="207-01-MA1" JumpToLabel="043-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="839" Canvas.Top="444" HorizontalAlignment="Left" VerticalAlignment="Center" Direction="Left"/>
         <Labels:JumpLabel JumpFromLabel="203-01-MA1" JumpToLabel="180-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="141" Canvas.Top="407" HorizontalAlignment="Left" VerticalAlignment="Top"/>
