--- a/Prevu.Synoptics.V6815_Enviroo/Pages/P230.xaml
+++ b/Prevu.Synoptics.V6815_Enviroo/Pages/P230.xaml
@@ -194,7 +194,7 @@
         <Machines:WaterPump Height="45" Width="44" RenderTransformOrigin="0.5,0.5" Color="Water" BorderBrush="Black" Canvas.Left="724" Canvas.Top="773" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Center" JumpFromLabel="234-01-MA1" JumpToLabel="268-01-MA1" Canvas.Left="66" Canvas.Top="760" Direction="Left"/>
         <Labels:JumpLabel JumpFromLabel="244-01-MA1" JumpToLabel="268-01-MA1" Canvas.Left="1423" Canvas.Top="664" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:JumpLabel JumpFromLabel="228-01-MA1" JumpToLabel="170-01-MA1" Canvas.Left="66" Canvas.Top="98" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:JumpLabel JumpFromLabel="228-01-MA1" JumpToLabel="170-SORT" Canvas.Left="66" Canvas.Top="98" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="229-01-MA1" JumpToLabel="291-01-MA1" Canvas.Left="1133" Canvas.Top="47" HorizontalAlignment="Center" VerticalAlignment="Center" Direction="Left"/>
         <Labels:JumpLabel JumpFromLabel="232-01-MA1" JumpToLabel="292-01-MA1" Canvas.Left="66" Canvas.Top="479" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:JumpLabel JumpFromLabel="236-01-MA1" JumpToLabel="283-01-MA1" Canvas.Left="1133" Canvas.Top="762" HorizontalAlignment="Left" VerticalAlignment="Center"/>
