--- a/Prevu.Synoptics.V6815_Enviroo/Pages/P330.xaml
+++ b/Prevu.Synoptics.V6815_Enviroo/Pages/P330.xaml
@@ -57,7 +57,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="128" StatusComponent="278-01-MA1" PipeHeight="Medium" Canvas.Left="191" Canvas.Top="154" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:Pipe Width="48" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="995" Canvas.Top="478" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="354-31-CV1" VisibilitySignal="LS2"/>
+        <Labels:Pipe Width="48" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="995" Canvas.Top="478" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="354-31-CV1" VisibilitySignal="LS-CLOSED"/>
         <Labels:Pipe Width="62" StatusComponent="306-01-MA1" PipeHeight="Medium" Canvas.Left="324" Canvas.Top="608" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -93,8 +93,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="115" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="1280" Canvas.Top="478" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="354-31-CV1" VisibilitySignal="LS2"/>
-        <Labels:Pipe Width="195" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="1064" Canvas.Top="478" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="354-31-CV1" VisibilitySignal="LS2"/>
+        <Labels:Pipe Width="115" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="1280" Canvas.Top="478" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="354-31-CV1" VisibilitySignal="LS-CLOSED"/>
+        <Labels:Pipe Width="195" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="1064" Canvas.Top="478" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="354-31-CV1" VisibilitySignal="LS-CLOSED"/>
         <Rectangle Height="102" Stroke="White" StrokeThickness="2" Width="118" RadiusX="15" RadiusY="15" Canvas.Left="994" Canvas.Top="165" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_STR_BatchReactor Height="240" Canvas.Left="1181" Canvas.Top="491" Width="122" Color="WetMaterial" ComponentName="335-41-LT1" TrendName="LEVEL" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:SCW_ScrewConveyor_straight Height="20" Width="187" Canvas.Left="176" Canvas.Top="568" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -125,6 +125,6 @@
         <Labels:DeviceLabel ComponentName="322-01-MA1" Canvas.Left="443" Canvas.Top="568" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:JumpLabel JumpFromLabel="330-WASHING" JumpToLabel="350-01-MA1" Canvas.Left="1354" Canvas.Top="730" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:JumpLabel JumpFromLabel="330-WASHING" JumpToLabel="354-HEAT" Canvas.Left="1374" Canvas.Top="446" HorizontalAlignment="Left" VerticalAlignment="Center" Direction="Left"/>
-        <Labels:JumpLabel JumpFromLabel="300-41-LT1" JumpToLabel="278-01-MA1" Canvas.Left="123" Canvas.Top="124" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:JumpLabel JumpFromLabel="300-41-LT1" JumpToLabel="278-TRP" Canvas.Left="123" Canvas.Top="124" HorizontalAlignment="Left" VerticalAlignment="Center" />
     </Canvas>
 </UserControl>
