--- a/Prevu.Synoptics.V6815_Enviroo/Pages/P810.xaml
+++ b/Prevu.Synoptics.V6815_Enviroo/Pages/P810.xaml
@@ -11,7 +11,6 @@
              x:Class="Prevu.Synoptics.P810" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
-        <Labels:Pipe Width="114" RenderTransformOrigin="0.5,0.5" StatusComponent="970-01-MA1" Canvas.Left="343" Canvas.Top="212" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Width="90" StatusComponent="822-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="724" Canvas.Top="644" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -19,16 +18,16 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="184" StatusComponent="568-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilityComponent="808-31-CV1" VisibilitySignal="LS1" Canvas.Left="440" Canvas.Top="133" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="75" StatusComponent="812-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="461" Canvas.Top="687" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="303" StatusComponent="557-01-ME1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilityComponent="808-31-CV1" VisibilitySignal="LS1" Canvas.Left="321" Canvas.Top="133" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="119" StatusComponent="812-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="439" Canvas.Top="665" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="130" StatusComponent="568-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="267" Canvas.Top="133"/>
-        <Labels:Pipe Width="182" StatusComponent="568-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilityComponent="808-31-CV1" VisibilitySignal="LS1" Canvas.Left="529" Canvas.Top="220" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="130" StatusComponent="557-01-ME1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="148" Canvas.Top="133"/>
+        <Labels:Pipe Width="182" StatusComponent="557-01-ME1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilityComponent="808-31-CV1" VisibilitySignal="LS1" Canvas.Left="529" Canvas.Top="220" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -42,8 +41,8 @@
         <Labels:Pipe Width="64" RenderTransformOrigin="0.5,0.5" StatusComponent="970-01-MA1" Canvas.Left="1156" Canvas.Top="142" Color="Air" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="110" RenderTransformOrigin="0.5,0.5" StatusComponent="890-01-EC1" Canvas.Left="1050" Canvas.Top="80" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="110" RenderTransformOrigin="0.5,0.5" StatusComponent="970-01-MA1" Canvas.Left="1050" Canvas.Top="157" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="138" RenderTransformOrigin="0.5,0.5" StatusComponent="970-01-MA1" Canvas.Left="474" Canvas.Top="212" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="132" RenderTransformOrigin="0.5,0.5" StatusComponent="970-01-MA1" Canvas.Left="279" Canvas.Top="277" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="164" RenderTransformOrigin="0.5,0.5" StatusComponent="970-01-MA1" Canvas.Left="448" Canvas.Top="212" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="132" RenderTransformOrigin="0.5,0.5" StatusComponent="970-01-MA1" Canvas.Left="384" Canvas.Top="277" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -64,14 +63,14 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="194" StatusComponent="568-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5"  VisibilityComponent="808-31-CV1" VisibilitySignal="LS2" Canvas.Left="368" Canvas.Top="260">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="194" StatusComponent="557-01-ME1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5"  VisibilityComponent="808-31-CV1" VisibilitySignal="LS2" Canvas.Left="249" Canvas.Top="260">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="106" StatusComponent="810-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="344" Canvas.Top="590" >
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="106" StatusComponent="810-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="344" Canvas.Top="546" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
@@ -94,10 +93,10 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Machines:Waste Height="46" Width="44" Canvas.Left="1229" Canvas.Top="335" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Left"  VerticalAlignment="Top" Height="22" Width="130" Canvas.Left="380" Canvas.Top="644"/>
-        <Machines:V01_SLX_MixingSiloScrew Canvas.Left="295" Canvas.Top="328" Height="234" Width="203" HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="810-46-WT1" TrendName="WEIGHT" Color="DryMaterial"/>
+        <Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Center"  VerticalAlignment="Top" Height="22" Width="130" Canvas.Left="380" Canvas.Top="598"/>
+        <Machines:V01_SLX_MixingSiloScrew Canvas.Left="295" Canvas.Top="284" Height="234" Width="203" HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="810-46-WT1" TrendName="WEIGHT" Color="DryMaterial"/>
         <Machines:V01_SLX_MixingSiloScrew Canvas.Left="566" Canvas.Top="286" Height="234" Width="203" HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="820-46-WT1" TrendName="WEIGHT" Color="DryMaterial"/>
-        <Machines:V01_DV_Diverter Canvas.Left="389" Canvas.Top="127" Height="57" Width="84" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_DV_Diverter Canvas.Left="270" Canvas.Top="127" Height="57" Width="84" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:SCW_ScrewConveyor_straight Height="23" Width="130" Canvas.Left="651" Canvas.Top="594" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Rectangle Height="76" Canvas.Left="870" Stroke="Black" Canvas.Top="679" Width="2" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:External Height="62" Width="56" RenderTransformOrigin="0.5,0.5" Canvas.Left="843" Canvas.Top="744" HorizontalAlignment="Left" VerticalAlignment="Center" />
@@ -105,14 +104,14 @@
         <Machines:V01_EC_FiltroManiche Canvas.Left="1194" Canvas.Top="128" Width="134" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DetailsLabel ComponentName="970-FILTER" DetailsPageName="D970" Canvas.Left="1230" Canvas.Top="72" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:JumpLabel JumpToLabel="548-01-MA1" Canvas.Left="1032" Canvas.Top="125" JumpFromLabel="970-FILTER" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="810-VIEW" DetailsPageName="D810" Canvas.Left="371" Canvas.Top="278" />
-        <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="820-VIEW" DetailsPageName="D820" Canvas.Left="643" Canvas.Top="239"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="812-01-MA1" Canvas.Left="421" Canvas.Top="585" />
+        <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="810-VIEW" DetailsPageName="D810" Canvas.Left="432" Canvas.Top="350" HideComponentName="True" />
+        <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="820-VIEW" DetailsPageName="D820" Canvas.Left="706" Canvas.Top="353" HideComponentName="True"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="812-01-MA1" Canvas.Left="421" Canvas.Top="541" />
         <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="822-01-MA1" Canvas.Left="691" Canvas.Top="532" />
-        <Labels:DeviceLabel ComponentName="808-31-CV1" Canvas.Left="385" Canvas.Top="73" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="810-SILO" Canvas.Left="278" Canvas.Top="377" />
-        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="820-SILO" Canvas.Left="549" Canvas.Top="327"/>
-        <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="808-31-CV1" JumpToLabel="568-01-MA1" Canvas.Left="195" Canvas.Top="103" />
+        <Labels:DeviceLabel ComponentName="808-31-CV1" Canvas.Left="266" Canvas.Top="73" HorizontalAlignment="Left" VerticalAlignment="Center" />
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="810-SILO" Canvas.Left="331" Canvas.Top="350" />
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="820-SILO" Canvas.Left="604" Canvas.Top="353"/>
+        <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="808-31-CV1" JumpToLabel="568-TRP" Canvas.Left="76" Canvas.Top="103" />
         <Labels:DeviceLabel ComponentName="822-71-ES2" Canvas.Left="885" Canvas.Top="690" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:JumpLabel JumpToLabel="532-01-MA1" Canvas.Left="1032" Canvas.Top="47" JumpFromLabel="970-FILTER" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <TextBlock Width="94" Canvas.Top="321" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="1028" Height="50" FontSize="36" FontWeight="Bold" Foreground="Black" HorizontalAlignment="Center" VerticalAlignment="Top"><Run Language="it-it" Text="S610"/><LineBreak/><Run/></TextBlock>
