--- a/Prevu.Synoptics.V6815_Enviroo/Details/D150.xaml
+++ b/Prevu.Synoptics.V6815_Enviroo/Details/D150.xaml
@@ -36,6 +36,6 @@
         <Rectangle Height="6" Stroke="Black" Width="30" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="347" Canvas.Top="225" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Rectangle Height="6" Stroke="Black" Width="30" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="275" Canvas.Top="225" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="150-01-MA1" Canvas.Left="44" Canvas.Top="154" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="150-02-EC1" Canvas.Left="185" Canvas.Top="20" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="150-02-ME1" Canvas.Left="185" Canvas.Top="20" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
