--- a/Prevu.Synoptics.V6815_Enviroo/Details/D970.xaml
+++ b/Prevu.Synoptics.V6815_Enviroo/Details/D970.xaml
@@ -35,10 +35,11 @@
         <Machines:V01_EC_FiltroManiche Canvas.Top="79" HorizontalAlignment="Left" Height="246" VerticalAlignment="Center" Width="190" Canvas.Left="30"/>
         <Machines:V01_VT_CMM_Blower_Air_Compressor Canvas.Left="101" Canvas.Top="18" Height="51" Width="51" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:V01_VS_Airlock Canvas.Left="87" Canvas.Top="334" Height="55" Width="54" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:Waste Height="48" Width="48" Canvas.Left="90" Canvas.Top="392" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Machines:Waste Height="54" Width="60" Canvas.Left="84" Canvas.Top="394" HorizontalAlignment="Left" VerticalAlignment="Top" />
         <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="970-03-EC1" SignalName="LSH" Canvas.Left="79" Canvas.Top="271"/>
         <Labels:DeviceLabel ComponentName="970-01-MA1" Canvas.Left="159" Canvas.Top="19" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="970-03-EC1" Canvas.Left="191" Canvas.Top="137" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel ComponentName="970-02-MA1" Canvas.Left="146" Canvas.Top="331" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:SignalLabel ComponentName="970-03-EC1" SignalName="LSH2" Canvas.Left="135" Canvas.Top="406" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
