--- a/Prevu.Synoptics.V6815_Enviroo/Pages/P180.xaml
+++ b/Prevu.Synoptics.V6815_Enviroo/Pages/P180.xaml
@@ -193,7 +193,7 @@
         <Labels:DeviceLabel ComponentName="195-01-MA1" Canvas.Left="690" Canvas.Top="572" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="197-01-MA1" Canvas.Left="858" Canvas.Top="617" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DeviceLabel ComponentName="199-01-MA1" Canvas.Left="1017" Canvas.Top="668" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="200-01-EC1" Canvas.Left="1203" Canvas.Top="708" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="200-01-ME1" Canvas.Left="1203" Canvas.Top="708" HorizontalAlignment="Left" VerticalAlignment="Center"/>
 
     </Canvas>
 </UserControl>
