--- a/Prevu.Synoptics.V6815_Enviroo/Pages/P288.xaml
+++ b/Prevu.Synoptics.V6815_Enviroo/Pages/P288.xaml
@@ -24,13 +24,6 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="86" StatusComponent="236-01-MA1" Color="Water" Canvas.Left="305" Canvas.Top="106" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Color="Water" Width="95" StatusComponent="288-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="880" Canvas.Top="380" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="228" StatusComponent="285-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="475" Canvas.Top="780"/>
         <Labels:Pipe Color="Water" Width="226" StatusComponent="285-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="699" Canvas.Top="559" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Color="Water" Width="225" StatusComponent="285-01-MA1" RenderTransformOrigin="0.5,0.5" Canvas.Left="589" Canvas.Top="670" HorizontalAlignment="Center" VerticalAlignment="Top">
@@ -77,20 +70,6 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="75" StatusComponent="286-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="503" Canvas.Top="564"/>
-        <Labels:Pipe Color="Water" Width="95" StatusComponent="288-23-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="930" Canvas.Top="380" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="132" StatusComponent="288-71-ES1" RenderTransformOrigin="0.5,0.5" Canvas.Left="911" Canvas.Top="240" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="90"/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="202" RenderTransformOrigin="0.5,0.5" StatusComponent="283-01-MA1" Canvas.Left="318" Canvas.Top="448">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -106,32 +85,44 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="122" StatusComponent="477-01-MA1" Color="Water" Canvas.Left="443" Canvas.Top="211" VisibilityComponent="477-32-CV1"/>
-        <Rectangle Height="2" Stroke="Black" Width="44" RenderTransformOrigin="0.5,0.5" Canvas.Left="955" Canvas.Top="176" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Color="Water" Width="62" StatusComponent="288-21-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="958" Canvas.Top="403" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <RotateTransform Angle="90"/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Color="Water" Width="62" StatusComponent="288-23-CV1" RenderTransformOrigin="0.5,0.5" Canvas.Left="988" Canvas.Top="404" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <RotateTransform Angle="90"/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Color="Water" Width="38" StatusComponent="288-71-ES1" RenderTransformOrigin="0.5,0.5" Canvas.Left="1000" Canvas.Top="325" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <RotateTransform Angle="90"/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
         <Machines:CV_Valve_001 HorizontalAlignment="Left" VerticalAlignment="Center" Height="50" Width="50" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="575" Canvas.Top="572" />
         <Machines:CV_Valve_001 HorizontalAlignment="Center" VerticalAlignment="Center" Height="50" Width="50" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="575" Canvas.Top="542"/>
         <Machines:WaterPump HorizontalAlignment="Center" VerticalAlignment="Top" Height="44" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1151" Canvas.Top="662"/>
         <Machines:Waste HorizontalAlignment="Left" VerticalAlignment="Center" Height="46" Width="44" Canvas.Left="145" Canvas.Top="683"/>
         <Machines:WaterPump Height="46" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1151" Canvas.Top="510" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:WaterPump Height="44" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1151" Canvas.Top="436" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:External Height="58" Width="60" RenderTransformOrigin="0.5,0.5" Canvas.Left="993" Canvas.Top="148" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Machines:External.RenderTransform>
-                <TransformGroup>
-                    <RotateTransform Angle="-90"/>
-                </TransformGroup>
-            </Machines:External.RenderTransform>
-        </Machines:External>
         <Machines:V01_RTF_Microfilter Canvas.Left="388" Canvas.Top="495" Height="130" Width="144" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_DCT_Decanter Canvas.Left="840" Canvas.Top="415" Height="360" Width="224" ComponentName="288-41-LT1" TrendName="LEVEL" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_DCT_Decanter_wSkimmer Canvas.Left="840" Canvas.Top="415" Height="360" Width="224" HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="288-41-LT1" TrendName="LEVEL"/>
         <Machines:WaterPump Height="44" Width="46" RenderTransformOrigin="0.5,0.5" Color="Water" BorderBrush="Black" Canvas.Left="438" Canvas.Top="761" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_SCW_ScrewConveyor_straight Canvas.Left="154" Canvas.Top="633" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:CV_Valve Canvas.Left="955" Canvas.Top="311" Height="24" Width="44" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Machines:CV_Valve Canvas.Left="994" Canvas.Top="346" Height="26" Width="50" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Machines:CV_Valve.RenderTransform>
                 <TransformGroup>
                     <RotateTransform Angle="90"/>
                 </TransformGroup>
             </Machines:CV_Valve.RenderTransform>
         </Machines:CV_Valve>
-        <Machines:CV_Valve_001 Height="50" Width="50" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="903" Canvas.Top="294" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Machines:CV_Valve_001 Height="50" Width="50" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="964" Canvas.Top="331" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Machines:CV_Valve_001.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -141,29 +132,7 @@
                 </TransformGroup>
             </Machines:CV_Valve_001.RenderTransform>
         </Machines:CV_Valve_001>
-        <Rectangle Height="35" Stroke="Black" Width="2" Canvas.Left="1293" Canvas.Top="420" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Ellipse Height="16" Stroke="#FFBDBDBD" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="1286" Canvas.Top="449" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="283-01-MA1" JumpToLabel="477-01-MA1" Canvas.Left="514" Canvas.Top="179" Direction="Left"/>
-        <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="297-01-MA1" JumpToLabel="110-01-MA1" Canvas.Left="1354" Canvas.Top="648"/>
-        <Labels:JumpLabel JumpFromLabel="292-01-MA1" JumpToLabel="232-01-MA1" Canvas.Left="1354" Canvas.Top="498" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:JumpLabel JumpFromLabel="291-01-MA1" JumpToLabel="229-01-MA1" Canvas.Left="1354" Canvas.Top="422" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:JumpLabel JumpFromLabel="283-01-MA1" JumpToLabel="236-01-MA1" Canvas.Left="233" Canvas.Top="74" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:DetailsLabel ComponentName="286-VIEW" DetailsPageName="D286" Canvas.Left="504" Canvas.Top="586" HideComponentName="True" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="283-01-MA1" Canvas.Left="233" Canvas.Top="229"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="297-01-MA1" Canvas.Left="1129" Canvas.Top="712"/>
-        <Labels:DeviceLabel ComponentName="285-01-MA1" Canvas.Left="335" Canvas.Top="758" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="292-01-MA1" Canvas.Left="1129" Canvas.Top="561" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="291-01-MA1" Canvas.Left="1129" Canvas.Top="379" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="288-71-ES1" Canvas.Left="879" Canvas.Top="101" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="288-71-ES3" Canvas.Left="985" Canvas.Top="101" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="288-21-CV1" Canvas.Left="813" Canvas.Top="298" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="288-01-MA1" Canvas.Left="905" Canvas.Top="436"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="288-41-LT1" Canvas.Left="906" Canvas.Top="504"/>
-        <Labels:DeviceLabel ComponentName="289-01-MA1" Canvas.Left="124" Canvas.Top="571" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel ComponentName="286-MICROFILT" Canvas.Left="396" Canvas.Top="586" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="291-44-FT1" Canvas.Left="1249" Canvas.Top="379" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel ComponentName="288-23-CV1" Canvas.Left="1000" Canvas.Top="298" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:JumpLabel JumpFromLabel="283-01-MA1" JumpToLabel="433-01-MA1" Canvas.Left="514" Canvas.Top="74" Direction="Left" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Machines:V01_SCW_ScrewConveyor_straight Canvas.Left="154" Canvas.Top="633" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_DSCW_SandClassifier Canvas.Left="267" Canvas.Top="262" Height="167" Width="199" HorizontalAlignment="Center" RenderTransformOrigin="0.5,0.5" VerticalAlignment="Top">
             <Machines:V01_DSCW_SandClassifier.RenderTransform>
                 <TransformGroup>
@@ -174,5 +143,31 @@
                 </TransformGroup>
             </Machines:V01_DSCW_SandClassifier.RenderTransform>
         </Machines:V01_DSCW_SandClassifier>
+        <Rectangle Height="35" Stroke="Black" Width="2" Canvas.Left="1293" Canvas.Top="420" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Ellipse Height="16" Stroke="#FFBDBDBD" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="1286" Canvas.Top="449" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Rectangle Height="2" Stroke="Black" Width="44" RenderTransformOrigin="0.5,0.5" Canvas.Left="996" Canvas.Top="308" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:External Height="50" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Left="1035" Canvas.Top="284" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Machines:External.RenderTransform>
+                <TransformGroup>
+                    <RotateTransform Angle="-90"/>
+                </TransformGroup>
+            </Machines:External.RenderTransform>
+        </Machines:External>
+        <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="283-01-MA1" JumpToLabel="477-01-MA1" Canvas.Left="514" Canvas.Top="179" Direction="Left"/>
+        <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="297-01-MA1" JumpToLabel="110-01-MA1" Canvas.Left="1354" Canvas.Top="648"/>
+        <Labels:JumpLabel JumpFromLabel="292-01-MA1" JumpToLabel="232-01-MA1" Canvas.Left="1354" Canvas.Top="498" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:JumpLabel JumpFromLabel="291-01-MA1" JumpToLabel="229-01-MA1" Canvas.Left="1354" Canvas.Top="422" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:JumpLabel JumpFromLabel="283-01-MA1" JumpToLabel="236-01-MA1" Canvas.Left="233" Canvas.Top="74" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:JumpLabel JumpFromLabel="283-01-MA1" JumpToLabel="433-01-MA1" Canvas.Left="514" Canvas.Top="74" Direction="Left" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:DetailsLabel ComponentName="286-VIEW" DetailsPageName="D286" Canvas.Left="504" Canvas.Top="586" HideComponentName="True" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="283-01-MA1" Canvas.Left="233" Canvas.Top="229"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="297-01-MA1" Canvas.Left="1129" Canvas.Top="712"/>
+        <Labels:DeviceLabel ComponentName="285-01-MA1" Canvas.Left="335" Canvas.Top="758" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="292-01-MA1" Canvas.Left="1129" Canvas.Top="561" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="291-01-MA1" Canvas.Left="1129" Canvas.Top="379" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="289-01-MA1" Canvas.Left="124" Canvas.Top="571" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="286-MICROFILT" Canvas.Left="396" Canvas.Top="586" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="291-44-FT1" Canvas.Left="1249" Canvas.Top="379" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DetailsLabel ComponentName="288-DCT" DetailsPageName="D288" Canvas.Left="926" Canvas.Top="498" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
